upgrade mytrackersdk to 3.0.+ and release new changes custom to FT+

--- a/sdk/pubspec.yaml
+++ b/sdk/pubspec.yaml
@@ -1,7 +1,7 @@
 name: mytracker_sdk
 description: A Flutter plugin for MyTracker SDK. Supports iOS and Android.
 version: 3.0.0
-author: "My.com"
+author: "Praveen Gangodu"
 homepage: "https://tracker.my.com"
 
 environment:
