--- a/sdk/android/build.gradle
+++ b/sdk/android/build.gradle
@@ -1,4 +1,4 @@
-group 'com.my.my.tracker.flutter'
+group 'com.my.tracker.flutter'
 version '1.0'
 
 buildscript {
@@ -37,5 +37,5 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.my.tracker:mytracker-sdk:3.0.+"
+    implementation "com.my.tracker:mytracker-sdk:3.1.0"
 }
